syntax = "proto3";
package core;
message File{
  string fileName = 1;
  string version = 2;
  bytes content = 3;
}