syntax = "proto3";
package core;

option java_multiple_files = true;

enum ProcessStatus{
  ALIVE = 0;
  LEAVED = 1;
  CRASHED = 2;
}
message Process{
  string timestamp = 1;
  string address = 2;
  int64 port = 3;
  ProcessStatus status = 4;
}
